# UPF

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  run_all.bat  run_all_tabs.bat  run_upf.bat  run_upf_menu.bat  upf_amalgamated.cpp
Testing/: TAG
Testing/20260324-0936/: Test.xml
config/: runtime_config.cpp  runtime_config.json  upf-config.json  upf-config.yaml
docs/: PR-2.1-review-checklist.md
include/upf/: cli.hpp  interfaces.hpp  node.hpp  upf.hpp  upf_all_in_one.hpp
include/upf/adapters/: console_adapters.hpp  network_adapters.hpp
include/upf/config/: runtime_config.hpp
include/upf/modules/: n6_packet_buffer.hpp  observability.hpp  session_table.hpp  transport_serialization.hpp
include/upf/protocol/: pfcp_wire.hpp
src/: cli.cpp  main.cpp  n4_mock_peer.cpp  n6_traffic_tool.cpp  node.cpp  stubs.cpp  upf.cpp  upf_old.cpp
src/adapters/: console_adapters.cpp  network_adapters.cpp
src/config/: runtime_config.cpp
src/modules/: n6_packet_buffer.cpp  observability.cpp  session_table.cpp  transport_serialization.cpp
src/protocol/: pfcp_wire.cpp
tests/: cli_tests.cpp  config_tests.cpp  n19_nx_network_transport_tests.cpp  n3_n6_forwarding_tests.cpp  n3_network_transport_test_dl.cpp  n3_network_transport_test_ul.cpp  n3_network_transport_tests.cpp  n4_network_transport_lifecycle_tests.cpp  n4_network_transport_negative_tests.cpp  n4_network_transport_tests.cpp  n4_pfcp_tests.cpp  n6_network_transport_tests.cpp  n6_packet_buffer_tests.cpp  n6_runtime_integration_tests.cpp  n6_runtime_interactive_tests.cpp  nsmf_internal_tests.cpp  pfcp_test_wire.hpp  pfcp_usage_report_test_utils.hpp  sbi_network_transport_tests.cpp  upf_extended_interfaces_tests.cpp  upf_notify_tests.cpp  upf_session_tests.cpp  upf_tests.cpp
