add_library(upf_core
    src/upf.cpp
    src/cli.cpp
    src/node.cpp
    src/adapters/console_adapters.cpp
    src/adapters/network_adapters.cpp
    src/protocol/pfcp_wire.cpp
    src/config/runtime_config.cpp
    src/modules/observability.cpp
    src/modules/transport_serialization.cpp
    src/modules/n6_packet_buffer.cpp
    src/modules/session_table.cpp
)